<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_to_local</name>
  <version>0.0.0</version>
  <description>Converts GPS waypoints to local XY coordinates using home as origin</description>
  <maintainer email="vikrant@todo.todo">vikrant</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>gps_navigation_interfaces</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
